Added comments to the codes

--- a/stylesheet/css/style.css
+++ b/stylesheet/css/style.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 } 
+/* Register styling starts here  */
 nav{
   display: flex;
   height: 80px;
